--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 0.7.1:
+ - Merge branch 'release-0.7' into develop
+
 Version 0.7.0:
  -     Removed old file
  -     --- Integrated backend     --- Improved naming of constants
