--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Version 0.7.3:
+ - 	--- Fixed incorrect educational material include filename 	--- Added DateAdded column to insert hospital maps 	--- Fixed syntax error in notification control delete function 	--- Fixed issue where registration would still continue if no database present 	--- Fixed clinical database dependenecy crash for test result
+ -     --- Added Database class call in default config
+ -     --- Fixed issue with missing default value in some fields on schema
+ -     --- Fixed issue where site would crash if Aria was not defined         -- Implemented the same source database check as in the backend, so the proper         source database information would load (if enabled)
+ -     --- Adding database class to properly call source database
+ - Merge branch 'release-0.7.2' into develop
+
 Version 0.7.2:
  -  --- No default configs needed for this file
  -     --- Added salt to register user function (was missing)
