--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+Version 0.9.0:
+ -     --- Fixed issue where final checklist was not completing the form on registration     --- Updated config to include firebase project ID
+ - --- Added questionnaire button on home page
+ - --- Renamed files
+ - --- Removed convertDateTime function. Now converting date directly in query
+ - Merge branch 'release-0.8.1' into develop
+
 Version 0.8.1:
  - Merge branch 'develop' of https://gitlab.com/akimosupremo/opalAdmin-dev into develop
  - --- Removed config include that caused JS to crash
