--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,32 @@
+Version 0.10.1:
+ -     --- Created a temporary table called QuestionnaireControlNew and adjusted scripts accordingly         -- The old questionnaire system already has a table named QuestionnaireControl. So         to avoid overwritting, we will execute a phase in / phase out so that when we're ready         to use the new questionnaire system, we will change the table names/scripts accordingly.
+ -     --- Added install access functionality (not completed)
+ -     --- Added a new file to handle config file generations
+ -     --- Set default install access flag to true         -- Makes sense considering the first installation of opalAdmin requires default access
+ -     --- Missed the removal of the "delete" header tag from previous commit
+ - Merge branch 'develop' of https://gitlab.com/akimosupremo/opalAdmin-dev into develop
+ - --- No longer using Grunt --- Fixed #1 --- Linted installationController to remove spaces and replace with tabs
+ - Update README.md
+ - Updated README.md
+ - Updated README.md
+ - -- modified line 5 "questionnaire-manage" to "questionnaire"
+ - Update README.md
+ - -- remove ng-change=“usernameUpdate()” on line 572 and ng-change=“passwordUpdate()” on line 584 because it is no longer required.
+ - Merge branch 'develop' of https://gitlab.com/akimosupremo/opalAdmin-dev into develop
+ - -- accidentally overwritten Ackeem modification on line 118, so changed it back from url: '/questionnaire/' to url: '/questionnaire'
+ - Update README.md
+ - -- Modified test-result.html on lines 172 & 177 ng-change=“descriptionUpdate()” to ng-change=“setChangesMade()”
+ - --- Minor change to questionnaire url
+ - --- Missed container classes from previous commit
+ - --- Fixed issue where current page wasn't highlighted in changed questionnaire menus
+ - --- Fixed issue where alias educational material was not auto filled in list
+ - --- Fixed deprecated PHP file call
+ - --- Fixed merge errors
+ - --- Renamed files to more sensible names     -- For better readability and understand of each script without necessarily having to open the file     -- Words in PHP files in /php and /api are now separated by underscores and lowercases (for consistency)     -- Prefixes added to each PHP filename that either gets, insert, deletes, or updates (for better readibility)
+ - 	--- Added phpstorm gitignore 	--- fixed indentation
+ - Merge branch 'release-0.10.0' into develop
+ -     --- Debugged queries
+
 Version 0.10.0:
  -     --- Migration file for changes made to the database
  - --- Fixed formatting on zoomed in login page
