--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,21 @@
+Version 0.10.3:
+ -     --- Removed illegal character
+ - Merge branch 'release-0.10.2'
+ - Merge branch 'release-0.10.1'
+ - Merge branch 'release-0.10.0'
+ - Merge branch 'release-0.10.0'
+ - Merge branch 'release-0.9.5'
+ - Merge branch 'release-0.9.5'
+ - Merge branch 'release-0.9.4'
+ - Merge branch 'release-0.9.4'
+ - Merge branch 'release-0.9.3'
+ - Merge branch 'release-0.9.2'
+ - Merge branch 'release-0.9.1'
+ - Merge branch 'release-0.9'
+ - Merge branch 'release-0.8.1'
+ - Merge branch 'release-0.8'
+ - Merge branch 'hotfix-0.7.6'
+
 Version 0.10.2:
  -     --- Changed encryption from SHA256 to SHA512
  - Merge branch 'develop' of https://gitlab.com/akimosupremo/opalAdmin-dev into develop
