--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 0.11.1:
+ - Merge branch 'checkin' into develop
+ - 	--- Check In Notification Module : send a notification to the user device that they are checked in.
+ - Merge branch 'release-0.11.0' into develop
+
 Version 0.11.0:
  - Merge branch 'oldQuestionnaire' into develop
  -     --- Fixed syntax and comma issue of Appointments crashing     --- Added missing demographic filters to legacy questionnaires
