--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Version 0.11.6:
+ - Added feature request issue template
+ - Delete issue_template.md. Templates located elsewhere
+ - Created Bug template for issue templates
+ - Add new file
+ - Added an issue template file for future issue reports
+ - Merge branch 'release-0.11.5' into develop
+
 Version 0.11.5:
  -     --- Remove unnecessary files
  - Merge branch 'patientFilter' into develop
