--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.11.7:
+ -     --- Fixes #1 where there was an empty expression list         -- Actually, worked as intended since waiting room management system wasn't         set up as a source database in production. Added functionality that ignored         source databases that aren't setup when adding a new alias.
+ - Merge branch 'release-0.11.6' into develop
+
 Version 0.11.6:
  - Added feature request issue template
  - Delete issue_template.md. Templates located elsewhere
