--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.12.1:
+ -     --- Changes made by Yick and James
+ - Merge branch 'release-0.12.0' into develop
+
 Version 0.12.0:
  - Merge branch 'OpalAdmin_Expression_To_Internal_Hospital_Code' into develop
  - Merge branch 'testResultFeature' into develop
