--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Version 0.12.2:
+ -     --- Fixes issue where radio buttons for educational material weren't auto selected on load.     --- Fixes other bugs related to diagnosis translation functionality
+ -     --- Bug fixes
+ - --- Added diagnosis translation to web app
+ - Merge branch 'release-0.12.1' into develop
+
 Version 0.12.1:
  -     --- Changes made by Yick and James
  - Merge branch 'release-0.12.0' into develop
