--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.12.5:
+ -     --- Fixes issue of corrupted image         The Sybase DBI (or Aria database) has a max length of 4096 for query results.         My guess is that this happened during the virtualization of the Aria database servers.         Had to increase the max length in order to get the rest of the image hex.
+ - Merge branch 'release-0.12.3' into develop
+
 Version 0.12.3:
 
 
